src/test/deca/context/valid/class/valid_operation_conversion_int_float.deca
// Description:
//    Valid assignment with implicit conversion from int to float.
//
// [Begin Result]
// No errors.
// [End Result]
//
// History:
//    Created on 06/01/2025.

{
    float f = 10.0;
    int i =0;
    f=f+i; // Implicit conversion from int to float
}
