src/test/deca/context/invalid/variable/invalid_assign_int_float.deca
// Description:
//    test invalid assignation between int and float
//    Test rule 3.28
//
// [Begin Result]
//invalid_assign_int_float.deca:13:11: Incompatible types, expected int but got float. Rule 3.28.
// [End Result]
//
// History:
//    cree le 06/01/2025

{
   int a = 1.0;
}
